[package]
name = "lmdb-zero"
version = "0.2.2"
authors = ["FullContact, Inc"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/fullcontact/lmdb-zero"
homepage = "https://github.com/fullcontact/lmdb-zero"
documentation = "https://api.fullcontact.com/v3/docs/rustdoc/lmdb_zero/index.html"
keywords = ["lmdb", "zero-copy", "btree"]

description = """
An almost-safe, near-zero-cost, feature-complete, unabashedly non-abstract
wrapper around LMDB.
"""

[dependencies]
liblmdb-sys = "0.2.1"
bitflags = "0.7.0"
libc = "0.2.14"

[dev-dependencies]
tempdir = "0.3.4"

[features]
# Don't check for alignment when converting `LmdbRaw` types from byte arrays.
#
# This allows more flexible use of structures and primitive types, but is not
# strictly safe and will cause segmentation faults on architectures which
# require alignment for most values.
lax_alignment = []
