[package]
name = "lmdb-zero"
version = "0.3.1"
authors = ["FullContact, Inc", "Jason Lingle"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/AltSysrq/lmdb-zero"
documentation = "https://docs.rs/lmdb-zero"
keywords = ["lmdb", "zero-copy", "btree"]

description = """
An almost-safe, near-zero-cost, feature-complete, unabashedly non-abstract
wrapper around LMDB.
"""

[dependencies]
liblmdb-sys = "0.2.1"
bitflags = "0.7.0"
libc = "0.2.14"
supercow = "0.1.0"

[dev-dependencies]
tempdir = "0.3.4"
